fix(media): fix servers list tooltip visibility and fullscreen media call layout

--- a/components/tailored/core/media/Media.less
+++ b/components/tailored/core/media/Media.less
@@ -14,6 +14,15 @@
     flex: 1;
     width: 100%;
     overflow: hidden;
+    justify-content: flex-end;
+  }
+}
+
+.fullscreen-media {
+  #mediastream {
+    #media {
+      justify-content: center;
+    }
   }
 }
 
@@ -33,6 +42,8 @@
   height: 30px;
   &.full {
     line-height: 13px;
+    width: 100%;
+    text-align: center;
   }
 }
 
